--- a/.github/workflows/tf-push.yml
+++ b/.github/workflows/tf-push.yml
@@ -7,7 +7,7 @@ on:
       - "terraform/**"
 defaults:
   run:
-    working-directory: terraform/deploy/
+    working-directory: terraform/
 
 jobs:
   push:
@@ -21,5 +21,5 @@ jobs:
 
       - name: "Terraform Format"
         id: fmt
-        run: terraform fmt
+        run: terraform fmt -recursive
         continue-on-error: true
