--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,62 +1,17 @@
 name: "Pull Request"
 on:
-  pull_request:
-    paths:
+  pull_request_review:
+    types: submitted
+    paths-ignore:
       - "terraform/**"
-defaults:
-  run:
-    working-directory: terraform/deploy/
 
 jobs:
-  terraform:
-    name: "Terraform"
+  pull-request:
+    name: "Non-Terraform Pull Request"
     runs-on: ubuntu-latest
+    if: github.event.review.state == 'approved'
     steps:
       - uses: actions/checkout@v2
-      - uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: 0.12.19
-      - uses: actions/setup-python@v2
-        with:
-          python-version: "3.x"
 
-      - name: "Install dependencies"
-        id: deps
-        run: pip install Jinja2 PyYAML boto3
-
-      - name: "Bootstrap"
-        id: bootstrap
-        run: |
-          python bootstrap_terraform.py
-          sed -i '/^assume_role/ d' terraform/deploy/terraform.tfvars
-        working-directory: .
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
-          AWS_SECRETS_ROLE: ${{ secrets.AWS_GHA_ROLE_MGMT_DEV }}
-          AWS_DEFAULT_REGION: eu-west-2
-
-      - name: "Terraform Format"
-        id: fmt
-        run: terraform fmt
-        continue-on-error: true
-
-      - name: "Terraform Init"
-        id: init
-        run: terraform init
-        env:
-          TF_VAR_assume_role: gha_aws_concourse
-          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: eu-west-2
-
-      - name: "Terraform Plan"
-        id: plan
-        run: terraform plan
-        continue-on-error: false
-        env:
-          TF_WORKSPACE: default
-          TF_VAR_assume_role: gha_aws_concourse
-          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: eu-west-2
+      - name: "Approved"
+        run: echo "approved"
