--- a/.github/workflows/tf-push.yml
+++ b/.github/workflows/tf-push.yml
@@ -1,15 +1,17 @@
 name: "Push Checks"
 on:
   push:
+    branches-ignore:
+      - master
     paths:
       - "terraform/**"
 defaults:
   run:
-    working-directory: terraform/deploy/
+    working-directory: terraform/
 
 jobs:
-  terraform:
-    name: "Terraform"
+  push:
+    name: "On Terraform Push"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -19,5 +21,5 @@ jobs:
 
       - name: "Terraform Format"
         id: fmt
-        run: terraform fmt
+        run: terraform fmt -recursive
         continue-on-error: true
