Run merge workflow when workflows are changed too
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/.github/workflows/tf-merge.yml
+++ b/.github/workflows/tf-merge.yml
@@ -5,6 +5,7 @@ on:
       - master
     paths:
       - "terraform/**"
+      - ".github/workflows/**"
 defaults:
   run:
     working-directory: terraform/deploy/
