Added working dir
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/.github/workflows/gha-push.yml
+++ b/.github/workflows/gha-push.yml
@@ -6,6 +6,9 @@ on:
     paths:
       - ".github/workflows/**"
       - ".vscode/**"
+defaults:
+  run:
+    working-directory: .github/workflows/
 
 jobs:
   push:
