--- a/.github/workflows/gha-push.yml
+++ b/.github/workflows/gha-push.yml
@@ -17,5 +17,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: nwisbeta/validate-yaml-schema@v1.0
-        env:
-          GITHUB_WORKSPACE: $GITHUB_WORKSPACE/.github
+        run: cd $GITHUB_WORKSPACE/.github
