--- a/.github/workflows/gha-push.yml
+++ b/.github/workflows/gha-push.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           files-to-validate: [
           {
-            path: ".github/workflows/**",
-            schema: ".github/workflows/schema.json"
+            "path": ".github/workflows/**",
+            "schema": ".github/workflows/schema.json"
           }
         ]
