--- a/.github/workflows/gha-push.yml
+++ b/.github/workflows/gha-push.yml
@@ -18,9 +18,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ansible/ansible-lint-action@master
         with:
-          files-to-validate: [
+          files-to-validate: '[
           {
             "path": ".github/workflows/**",
             "schema": ".github/workflows/schema.json"
           }
-        ]
+        ]'
