--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "yaml.schemas": {
         "http://json.schemastore.org/github-workflow": [
-            "./github/workflows/*.yml"
+            "workflows/*.yml"
         ]
     }
 }
