--- a/.github/workflows/gha-push.yml
+++ b/.github/workflows/gha-push.yml
@@ -12,8 +12,10 @@ jobs:
     name: "Validate workflows"
     runs-on: ubuntu-latest
     steps:
+      - name: "arc install"
+        id: arc
+        run: curl https://raw.githubusercontent.com/nektos/act/master/install.sh | sudo bash
       - uses: actions/checkout@v2
-      - name: "Copy workflows"
-        id: copy
-        run: mkdir workflows && cp .github/workflows/*.yml workflows/
-      - uses: nwisbeta/validate-yaml-schema@v1.0
+      - name: "arc dry-run"
+        id: dry-run
+        run: act -n
