--- a/.github/workflows/gha-push.yml
+++ b/.github/workflows/gha-push.yml
@@ -18,4 +18,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: "arc dry-run"
         id: dry-run
-        run: act -n
+        run: |
+          act -l
+          act -n
