--- a/.github/workflows/gha-push.yml
+++ b/.github/workflows/gha-push.yml
@@ -16,8 +16,16 @@ jobs:
         id: arc
         run: curl https://raw.githubusercontent.com/nektos/act/master/install.sh | sudo bash
       - uses: actions/checkout@v2
+      - name: "arc list workflows"
+        id: list
+        run: |
+          act -l
       - name: "arc dry-run"
         id: dry-run
         run: |
           act -l
           act -n
+      - name: "arc test push"
+        id: test
+        run: |
+          act
