--- a/.github/workflows/tf-merge.yml
+++ b/.github/workflows/tf-merge.yml
@@ -75,7 +75,7 @@ jobs:
   management:
     name: "Terraform Apply Mangement"
     runs-on: ubuntu-latest
-    needs: management-dev
+    needs: mangement-dev
     steps:
       - uses: actions/checkout@v2
       - uses: hashicorp/setup-terraform@v1
