enables apply to management (#194)
* enables apply to management

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Added TF_INPUT

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/.github/workflows/tf-merge.yml
+++ b/.github/workflows/tf-merge.yml
@@ -56,6 +56,7 @@ jobs:
         continue-on-error: false
         env:
           TF_WORKSPACE: default
+          TF_INPUT: false
           TF_VAR_assume_role: gha_aws_concourse
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
@@ -67,6 +68,7 @@ jobs:
         continue-on-error: false
         env:
           TF_WORKSPACE: default
+          TF_INPUT: false
           TF_VAR_assume_role: gha_aws_concourse
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
@@ -110,18 +112,19 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: eu-west-2
 
-      # - name: "Terraform Apply"
-      #   id: apply
-      #   run: |
-      #     terraform plan -out terraform.plan
-      #     terraform apply -auto-approve terraform.plan
-      #   continue-on-error: false
-      #   env:
-      #     TF_WORKSPACE: management
-      #     TF_VAR_assume_role: gha_aws_concourse
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
-      #     AWS_DEFAULT_REGION: eu-west-2
+      - name: "Terraform Apply"
+        id: apply
+        run: |
+          terraform plan -out terraform.plan
+          terraform apply -auto-approve terraform.plan
+        continue-on-error: false
+        env:
+          TF_WORKSPACE: management
+          TF_INPUT: false
+          TF_VAR_assume_role: gha_aws_concourse
+          AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: eu-west-2
 
       - name: "Terraform Plan"
         id: plan
@@ -129,6 +132,7 @@ jobs:
         continue-on-error: false
         env:
           TF_WORKSPACE: management
+          TF_INPUT: false
           TF_VAR_assume_role: gha_aws_concourse
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
