Uplift to AL2, set logging to error, restore web admin job in mgmt-dev
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ aviator_pipeline.yml
 ci/jobs/management-dev.yml
 ci/jobs/management.yml
 ci/jobs/reboot-web-management.yml
+ci/jobs/reboot-web-management-dev.yml
 ci/jobs/reboot-worker-management.yml
 ci/jobs/reboot-worker-management-dev.yml
 ci/jobs/mgmt-user-admin.yml
