Uplift to AL2 (#203)
* Uplift to AL2, set logging to error, restore web admin job in mgmt-dev

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* Added job to groups

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

* s

Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/ci/groups.yml
+++ b/ci/groups.yml
@@ -8,6 +8,9 @@ groups:
   - name: reboot-worker-nodes-dev
     jobs:
       - reboot-management-dev-worker-nodes
+  - name: reboot-web-nodes-dev
+    jobs:
+      - reboot-management-dev-web-nodes
   - name: user-administration
     jobs:
       - management-user-admin
