--- a/terraform/modules/concourse_web/templates/teams/identity/team.yml
+++ b/terraform/modules/concourse_web/templates/teams/identity/team.yml
@@ -1,7 +1,7 @@
 roles:
   - name: owner
     local:
-      users: ["${identity_owner}"]
+      users: ["${CONCOURSE_USER}"]
   - name: viewer
     oidc:
       groups: ["dataworks"]
