--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -274,7 +274,6 @@ meta:
           args:
             - -exc
             - |
-              set +x
               COGNITO_USER_POOL=$(aws cognito-idp list-user-pools --max-results 20 | jq -r --arg COGNITO_USER_POOL "$COGNITO_USER_POOL" '.UserPools[] | select(.Name | test($COGNITO_USER_POOL)) | .Id')
               aws secretsmanager get-secret-value --secret-id $COGNITO_USERS_SECRET --query SecretBinary --output text | base64 -d >> users.json
               aws cognito-idp list-users --user-pool-id $COGNITO_USER_POOL | jq -r '.Users[] | .Username' >> user.parse
@@ -282,6 +281,41 @@ meta:
               do
                 if [[ ! -z $(grep ${COGNAME} user.parse) ]]; then
                     aws cognito-idp admin-delete-user \
+                    --user-pool-id $COGNITO_USER_POOL \
+                    --username $COGNAME
+                fi
+              done
+
+    admin-reset-password:
+      task: admin-reset-password
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source:
+            repository: ((docker-awscli.repository))
+            version: ((docker-awscli.version))
+            tag: ((docker-awscli.version))
+        params:
+          AWS_PROFILE: ci
+          AWS_SHARED_CREDENTIALS_FILE: .aws/credentials
+          AWS_CONFIG_FILE: .aws/config
+          COGNITO_USER_POOL: concourse
+          COGNITO_USERS_SECRET: /concourse/dataworks/concourse-cognito
+        inputs:
+          - name: .aws
+        run:
+          path: sh
+          args:
+            - -exc
+            - |
+              COGNITO_USER_POOL=$(aws cognito-idp list-user-pools --max-results 20 | jq -r --arg COGNITO_USER_POOL "$COGNITO_USER_POOL" '.UserPools[] | select(.Name | test($COGNITO_USER_POOL)) | .Id')
+              aws secretsmanager get-secret-value --secret-id $COGNITO_USERS_SECRET --query SecretBinary --output text | base64 -d >> users.json
+              aws cognito-idp list-users --user-pool-id $COGNITO_USER_POOL | jq -r '.Users[] | .Username' >> user.parse
+              for COGNAME in $(cat users.json| jq -r '.Users[] | select(.reset | test("true")) | .username');
+              do
+                if [[ ! -z $(grep ${COGNAME} user.parse) ]]; then
+                    aws cognito-idp admin-reset-user-password \
                     --user-pool-id $COGNITO_USER_POOL \
                     --username $COGNAME
                 fi
