--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -1,84 +1,5 @@
 meta:
   plan:
-    terraform-bootstrap:
-      task: terraform-bootstrap
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source:
-            repository: dwpdigital/jinja-yaml-aws
-            version: 0.0.5
-            tag: 0.0.5
-        run:
-          path: sh
-          args:
-            - -exc
-            - |
-              python bootstrap_terraform.py
-              sed -i '/^assume_role/ d' terraform/deploy/terraform.tfvars
-              cp terraform/deploy/terraform.tf ../terraform-config
-              cp terraform/deploy/terraform.tfvars ../terraform-config
-          dir: aws-concourse
-        inputs:
-          - name: aws-concourse
-        outputs:
-          - name: terraform-config
-      params:
-        AWS_ACCESS_KEY_ID: ((ci.aws_access_key_id))
-        AWS_SECRET_ACCESS_KEY: ((ci.aws_secret_access_key))
-        AWS_REGION: eu-west-2
-        AWS_SECRETS_ROLE: arn:aws:iam::((aws_account.management-dev)):role/ci
-    terraform-output:
-      task: terraform-output
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source:
-            repository: ((terraform.repository))
-            version: ((terraform12.version))
-            tag: ((terraform12.version))
-        params:
-          AWS_ACCESS_KEY_ID: ((ci.aws_access_key_id))
-          AWS_SECRET_ACCESS_KEY: ((ci.aws_secret_access_key))
-        run:
-          path: sh
-          dir: aws-concourse/terraform/deploy
-          args:
-            - -exc
-            - |
-              cp ../../../terraform-config/terraform.tf .
-              cp ../../../terraform-config/terraform.tfvars .
-              terraform init
-              terraform workspace show
-              terraform output -json > ../../../terraform-output/outputs.json
-        inputs:
-          - name: aws-concourse
-          - name: terraform-config
-        outputs:
-          - name: terraform-output
-    concourse-smoke-tests:
-      task: concourse-smoke-tests
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source:
-            repository: dwpdigital/alpine-jq-curl
-            version: 0.0.4
-            tag: 0.0.4
-        run:
-          path: sh
-          args:
-            - -exc
-            - |
-              CONCOURSE_URI=$(cat ../terraform-output/outputs.json | jq -r .loadbalancer.value.outputs.fqdn)
-              curl -kIs https://${CONCOURSE_URI} | grep 'HTTP/2 200'
-              curl -ks https://${CONCOURSE_URI} | grep 'Concourse'
-          dir: concourse-smoke-tests
-        inputs:
-          - name: terraform-output
     create-aws-profiles:
       task: create-aws-profiles
       config:
@@ -169,7 +90,7 @@ meta:
             - -exc
             - |
               mkdir -p credentials
-              SECRETS_ID=$(aws secretsmanager list-secrets | jq -r .SecretList[].Name | grep dataworks-secrets)
+              SECRETS_ID=$(aws secretsmanager list-secrets | jq -r .SecretList[].Name | grep dataworks/dataworks-secrets)
               aws secretsmanager get-secret-value --secret-id $SECRETS_ID --query SecretBinary --output text | base64 -d > credentials/dataworks-secrets.json
 
     reboot-worker-nodes:
@@ -179,9 +100,9 @@ meta:
         image_resource:
           type: docker-image
           source:
-            repository: dwpdigital/alpine-jq-curl
-            version: 0.0.4
-            tag: 0.0.4
+            repository: ((docker-jq-curl.repository))
+            tag: ((docker-jq-curl.version))
+            version: ((docker-jq-curl.version))
         inputs:
           - name: credentials
         run:
@@ -190,7 +111,7 @@ meta:
             - -exc
             - |
               set +x
-              curl -Lk -o fly.tgz "https://github.com/concourse/concourse/releases/download/v6.4.1/fly-6.4.1-linux-amd64.tgz"
+              curl -Lk -o fly.tgz "https://github.com/concourse/concourse/releases/download/v6.6.0/fly-6.6.0-linux-amd64.tgz"
               tar -xvf fly.tgz
               chmod +x fly
               USERNAME=$(cat credentials/dataworks-secrets.json | jq -r .concourse_user)
