Migrate Concourse admin jobs to Concourse mgmt-dev.
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/aviator.yml
+++ b/aviator.yml
@@ -15,7 +15,7 @@ spruce:
     to: aviator_pipeline.yml
 fly:
   name: aws-concourse
-  target: concourse
+  target: dev-aws-concourse
   expose: false
   config: aviator_pipeline.yml
   check_creds: true
