--- a/ci/resources.yml
+++ b/ci/resources.yml
@@ -3,17 +3,19 @@ resources:
     type: git
     source:
       branch: master
-      username: ((github_com.username))
-      password: ((github_com.token))
       uri: https://github.com/dwp/aws-concourse.git
     check_every: 15m
+    webhook_token: ((dataworks.concourse_github_webhook_token))
+
   - name: aws-concourse-users
     type: git
     source:
       branch: master
-      private_key: ((svc-dip.private_key))
-      uri: git@github.ucds.io:dip/dataworks-secrets.git
+      api_endpoint: https://((dataworks.enterprise_github_url))/api/v3/
+      username: ((dataworks.enterprise_github_username))
+      password: ((dataworks-secrets.enterprise_github_pat))
+      uri: https://((dataworks.enterprise_github_url))/dip/dataworks-secrets.git
       paths:
         - concourse/dataworks/concourse-cognito/**
     check_every: 720h
-    webhook_token: ((ucfs-github.webhook-token))
+    webhook_token: ((dataworks.concourse_github_webhook_token))
