--- a/ci/groups.yml
+++ b/ci/groups.yml
@@ -9,3 +9,6 @@ groups:
     jobs:
       - management-user-admin
       - management-dev-user-admin
+  - name: credentials
+    jobs:
+      - admin-activate-creds
