--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -86,7 +86,7 @@ meta:
                     aws cognito-idp admin-create-user \
                     --user-pool-id $COGNITO_USER_POOL \
                     --username $COGNAME \
-                    --user-attributes Name=email,Value=$COGEMAIL Name=phone_number,Value=$COGPHONE Name=phone_number_verified,Value=true \
+                    --user-attributes Name=email,Value=$COGEMAIL Name=phone_number,Value=$COGPHONE Name=phone_number_verified,Value=true Name=email_verified,Value=true \
                     --desired-delivery-mediums EMAIL
                 fi
                 for COGGROUP in $COGGROUPS; do
