Move GitHub access to view only
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/terraform/modules/concourse_web/templates/teams/dataworks/team.yml
+++ b/terraform/modules/concourse_web/templates/teams/dataworks/team.yml
@@ -2,6 +2,7 @@ roles:
   - name: member
     oidc:
       groups: ["dataworks"]
+  - name: viewer
     github:
       teams: ["dip:devops"]
   - name: owner
