change pr to output plan to log. Use state outputs from cognito. Remove CI jobs related to cognito
Signed-off-by: levankirvalidze <levankirvalidze@digital.uc.dwp.gov.uk>

--- a/.github/workflows/tf-pull-request.yml
+++ b/.github/workflows/tf-pull-request.yml
@@ -69,7 +69,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
 
       - uses: actions/upload-artifact@v2
-        if: failure()
+        if: ${{ always() }}
         with:
           name: mgmt-dev-workflow-log
           path: ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.log
