log as json so i can read it
Signed-off-by: levankirvalidze <levankirvalidze@digital.uc.dwp.gov.uk>

--- a/.github/workflows/tf-pull-request.yml
+++ b/.github/workflows/tf-pull-request.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: "Terraform Plan"
         id: plan
-        run: terraform plan >> ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.log
+        run: terraform plan >> ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.json
         continue-on-error: false
         env:
           TF_WORKSPACE: default
