--- a/.github/workflows/tf-pull-request.yml
+++ b/.github/workflows/tf-pull-request.yml
@@ -72,4 +72,4 @@ jobs:
         if: ${{ always() }}
         with:
           name: mgmt-dev-workflow-log
-          path: ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.log
+          path: ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.json
