--- a/.github/workflows/tf-pull-request.yml
+++ b/.github/workflows/tf-pull-request.yml
@@ -49,7 +49,13 @@ jobs:
 
       - name: "Terraform Plan"
         id: plan
-        run: terraform plan >> ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.log
+        run: |
+          terraform state rm module.cognito.aws_cognito_user_pool.concourse
+          terraform state rm module.cognito.aws_cognito_user_group.dataworks
+          terraform state rm module.cognito.aws_cognito_user_group.admins
+          terraform state rm module.cognito.aws_cognito_user_pool_client.app_client
+          terraform state rm module.cognito.aws_cognito_user_pool_domain.main
+          terraform plan >> ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.log
         continue-on-error: false
         env:
           TF_WORKSPACE: management
