--- a/.github/workflows/tf-pull-request.yml
+++ b/.github/workflows/tf-pull-request.yml
@@ -3,6 +3,7 @@ on:
   pull_request:
     paths:
       - "terraform/**"
+  workflow_dispatch: {}
 defaults:
   run:
     working-directory: terraform/deploy/
