--- a/.github/workflows/tf-pull-request.yml
+++ b/.github/workflows/tf-pull-request.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: "Terraform Plan"
         id: plan
-        run: terraform plan >> ${{ github.workspace }}/${{ github.run_id }}-${{ github.run_number }}.log
+        run: terraform plan
         continue-on-error: false
         env:
           TF_WORKSPACE: management
