--- a/.github/workflows/tf-push.yml
+++ b/.github/workflows/tf-push.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 0.12.19
+          terraform_version: ${{ terraform_13_version }}
 
       - name: "Terraform Format"
         id: fmt
