--- a/.github/workflows/tf-pull-request.yml
+++ b/.github/workflows/tf-pull-request.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 0.12.19
+          terraform_version: ${{ secrets.TERRAFORM_13_VERSION }}
       - uses: actions/setup-python@v2
         with:
           python-version: "3.x"
