add update-pipeline job
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/ci/groups.yml
+++ b/ci/groups.yml
@@ -8,3 +8,6 @@ groups:
   - name: credentials
     jobs:
       - admin-activate-creds
+  - name: update-pipeline
+    jobs:
+      - update-pipeline
