--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -63,6 +63,8 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.ACTIONS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ACTIONS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: eu-west-2
+          TF_VAR_concourse_username: ${{ secrets.CONCOURSE_USERNAME }}
+          TF_VAR_concourse_password: ${{ secrets.CONCOURSE_PASSWORD }}
       
       - name: "Terraform Plan"
         id: plan
