adding sensitive to outputs and TF_LOG -> ERROR

--- a/.github/workflows/tf-pull-request.yml
+++ b/.github/workflows/tf-pull-request.yml
@@ -12,6 +12,8 @@ jobs:
   pull-request:
     name: "Terraform Pull Request"
     runs-on: ubuntu-latest
+    env:
+      TF_LOG: "ERROR"
     steps:
       - uses: actions/checkout@v2
       - uses: hashicorp/setup-terraform@v1
