--- a/.github/workflows/tf-merge.yml
+++ b/.github/workflows/tf-merge.yml
@@ -15,6 +15,8 @@ jobs:
   management-dev:
     name: "Terraform Apply Mangement-Dev"
     runs-on: ubuntu-latest
+    env:
+      TF_LOG: "ERROR"
     steps:
       - uses: actions/checkout@v2
       - uses: hashicorp/setup-terraform@v1
