Adds pipeline jobs to update ami-ids within a secret when new AMIs are created
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/ci/groups.yml
+++ b/ci/groups.yml
@@ -8,6 +8,10 @@ groups:
   - name: credentials
     jobs:
       - admin-activate-creds
+  - name: ami-id-update
+    jobs:
+      - ami-id-update-mgmt-dev
+      - ami-id-update-mgmt
   - name: update-pipeline
     jobs:
       - update-pipeline
