--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -73,3 +73,54 @@ meta:
             - |
               source /assume-role
               aws iam update-access-key --access-key-id $GHA_ACCESS_KEY_ID --status Active --user-name gha-aws-concourse
+
+   update-ami-secrets:
+     task: update-ami-secrets
+     config:
+       platform: linux
+       image_resource:
+         type: docker-image
+         source:
+           repository: ((dataworks.docker_awscli_repository))
+           version: ((dataworks.docker_awscli_version))
+           tag: ((dataworks.docker_awscli_version))
+       params:
+         AWS_DEFAULT_REGION: ((dataworks.aws_region))
+       run:
+         path: sh
+         args:
+           - -exc
+           - |
+             source /assume-role
+
+             if [[ -d "untested-concourse-ami" ]]; then
+                 CONCOURSE_AMI_MGMT_DEV=$(cat untested-concourse-ami/id)
+             else
+               echo "No untested-concourse-ami id available"
+             done
+
+             if
+               [[ -d "dw-al2-concourse-ami" ]]; then
+                 CONCOURSE_AMI=$(cat dw-al2-concourse-ami/id)
+             else
+               echo "No dw-al2-concourse-ami id available"
+             fi
+
+             if [[ -z "$CONCOURSE_AMI_MGMT_DEV" && -z "$CONCOURSE_AMI" ]]; then
+                 echo "No available AMI IDs...Exiting"
+                 exit 1
+             done
+
+             echo $(aws secretsmanager get-secret-value --secret-id /concourse/dataworks/ami-ids --query SecretBinary --output text | base64 -D) > ami-ids.json
+
+             if [[ ! -z "$CONCOURSE_AMI_MGMT_DEV" ]]; then
+                 OLD_CONCOURSE_AMI_MGMT_DEV=$(cat ami-ids.json | jq '.concourse_ami')
+                 sed -i 's/$OLD_CONCOURSE_AMI_MGMT_DEV/$CONCOURSE_AMI_MGMT_DEV' ami-ids.json
+             done
+             
+             if [[ ! -z "$CONCOURSE_AMI" ]]; then
+               OLD_CONCOURSE_AMI=$(cat ami-ids.json | jq '.concourse_ami')
+               sed -i 's/$OLD_CONCOURSE_AMI/$CONCOURSE_AMI' ami-ids.json
+             done
+
+             aws secretsmanager put-secret-value  --secret-id /concourse/dataworks/ami-ids --secret-binary fileb://ami-ids.json
