--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -94,14 +94,14 @@ meta:
              source /assume-role
 
              if [[ -d "untested-al2-concourse-ami" ]]; then
-                 CONCOURSE_AMI_MGMT_DEV=$(cat untested-al2-concourse-ami/id)
+                 CONCOURSE_AMI_MGMT_DEV=\"$(cat untested-al2-concourse-ami/id)\"
              else
                echo "No untested-al2-concourse-ami id available"
              fi
 
              if
                [[ -d "dw-al2-concourse-ami" ]]; then
-                 CONCOURSE_AMI=$(cat dw-al2-concourse-ami/id)
+                 CONCOURSE_AMI=\"$(cat dw-al2-concourse-ami/id)\"
              else
                echo "No dw-al2-concourse-ami id available"
              fi
