Create ami test
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/ci/ami-test/jobs/ami-test.yml
+++ b/ci/ami-test/jobs/ami-test.yml
@@ -1,7 +1,10 @@
 jobs:
   - name: ami-test
     plan:
+    - get: meta
+      resource: meta-dev
     - get: untested-al2-concourse-ami
+      trigger: true
     - config:
         image_resource:
           source:
