--- a/ci/ami-test/resource_types.yml
+++ b/ci/ami-test/resource_types.yml
@@ -4,3 +4,8 @@ resource_types:
     source:
       repository: dwpdigital/ami-resource
       tag: latest
+  - name: meta
+    type: docker-image
+    source:
+      repository: olhtbr/metadata-resource
+      tag: 2.0.1
