always update mgmt-dev on new AMI
Signed-off-by: Chris Scott-Thomas <chris.scott-thomas@infinityworks.com>

--- a/ci/jobs/ami-id-update.yml
+++ b/ci/jobs/ami-id-update.yml
@@ -2,7 +2,7 @@ jobs:
   - name: ami-id-update-mgmt-dev
     plan:
       - get: untested-al2-concourse-ami
-        trigger: false
+        trigger: true
       - .: (( inject meta.plan.update-ami-secrets ))
         config:
           params:
