--- a/ci/jobs/ami-id-update.yml
+++ b/ci/jobs/ami-id-update.yml
@@ -9,6 +9,7 @@ jobs:
             AWS_ROLE_ARN: arn:aws:iam::((aws_account.management-dev)):role/ci
           inputs:
             - name: untested-al2-concourse-ami
+      - .: (( inject meta.plan.workflow-dispatch ))
   - name: ami-id-update-mgmt
     plan:
       - get: dw-al2-concourse-ami
