--- a/ci/meta.yml
+++ b/ci/meta.yml
@@ -149,5 +149,5 @@ meta:
               -X POST \
               -H "Accept: application/vnd.github.v3+json" \
               -H "authorization: Bearer $GITHUB_TOKEN" \
-              https://api.github.com/repos/dwp/aws-concourse/actions/workflows/ami-test-apply/dispatches \
-              -d '{"ref":"ref"}'
+              https://api.github.com/repos/dwp/aws-concourse/actions/workflows/11113564/dispatches \
+              -d '{"ref":"master"}'
